kubernetes/kustomize/umami/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  labels:
    app: umami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami
    spec:
      serviceAccount: "analytics"
      containers:
      - name: umami
        command:
          ["/bin/sh", "-c"]
        args:
          ['source /secrets/analytics-env && yarn start-docker']
        image: umami
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "500m"
            memory: "500Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 5
        volumeMounts:
        - mountPath: "/secrets"
          name: "secrets"
      volumes:
        - name: vault-agent-config
          configMap:
            defaultMode: 420
            name: analytics-vault-config

        - name: secrets
          emptyDir: {}

        - name: "k8-tokens"
          projected:
            defaultMode: 420
            sources:
            - serviceAccountToken:
                expirationSeconds: 7200
                path: "vault-token"
