kubernetes/kustomize/umami/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: umami
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: umami
